--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@types/multer": "^2.0.0",
-    "anthropic": "^0.0.0",
     "bcryptjs": "^3.0.2",
     "docx": "^9.5.1",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.539.0",
     "mammoth": "^1.10.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
+    "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.2.0",
     "react": "19.1.0",
