--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "docx": "^9.5.1",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
@@ -19,6 +21,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
+    "nodemailer": "^7.0.5",
     "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.2.0",
