--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "docx": "^9.5.1",
+    "dotenv": "^17.2.1",
     "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
